<resources>
    <string name="app_name">AdnBikeRider</string>
    <string name="confirmar">Confirmar</string>
    <string name="tienes_tu_codigo_de_verificacion">¿Tienes tu codigo de verificacion?</string>
    <string name="ingrese_su_c_digo_de_4_d_gitos">Ingrese su código de 4 dígitos</string>
    <string name="description_group">Description Group</string>
    <string name="group_name">Group Name</string>
    <string name="name">Name</string>
    <string name="title_activity_route_map">Map</string>
    <string name="title_activity_view_record">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>