<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.v.Verify">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bgHeader"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@drawable/blue_bg"
        android:elevation="5dp">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tvVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:transitionName="tvRegister"
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/tienes_tu_codigo_de_verificacion" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bgHeader"
        android:layout_margin="20dp">

        <RelativeLayout
            android:id="@+id/rLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="50dp">

                    <TextView
                        android:id="@+id/textContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/ingrese_su_c_digo_de_4_d_gitos"
                        android:textStyle="bold" />

                    <com.chaos.view.PinView
                        android:id="@+id/pinView"
                        style="@style/PinWidget.PinView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:drawablePadding="16dp"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="text"
                        android:padding="16dp"
                        app:itemCount="4"
                        app:itemHeight="48dp"
                        app:itemRadius="10dp"
                        app:lineColor="@android:color/darker_gray"
                        app:viewType="rectangle" >
                    </com.chaos.view.PinView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cvRegister"
                android:layout_alignStart="@+id/cvRegister"
                android:layout_alignEnd="@+id/cvRegister"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="-30dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="35dp"
                android:elevation="10dp">

                <Button
                    android:id="@+id/btnConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_login"
                    android:text="@string/confirmar"
                    android:textAllCaps="false" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>